# telegram-bot-template

./: .env.example  .gitignore  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
bot/: config.py  main.py
bot/database/: database.py  models.py
bot/handlers/: __init__.py  admin.py  user.py
bot/i18n/en/: text.ftl
bot/i18n/ru/: text.ftl
bot/middlewares/: __init__.py  administator.py
bot/migration/: env.py
